--- a/files/stateof/mocks/sentiment/style.css
+++ b/files/stateof/mocks/sentiment/style.css
@@ -1,10 +1,4 @@
-#mockup-selector {
-	display: flex;
-	gap: 1em;
-	border: 1px solid hsl(0 0% 100% / .3);
-	padding: 1em;
-	margin: 1em 0;
-}
+@import url("question.css");
 
 @keyframes fade-in {
 	from {
@@ -29,20 +23,20 @@
 	flex: 1;
 }
 
-.followups, .issues {
+.sentiments {
 	display: inline-flex;
 	flex-wrap: wrap;
 	gap: .8em;
 }
 
-.form-check .followups, .form-check .issues {
+.form-check .sentiments {
 		margin-left: .8em;
 	}
 
-.followup {
+.sentiment {
 	--_color: var(--color, var(--bs-blue));
 	border: 1px solid hsl(0 0% 100% / .3);
-	padding: 0.1em 1em 0.05em;
+	padding: 0.1em .8em 0.05em;
 	border-radius: 999px;
 	background: color-mix(in lab, var(--_color), transparent calc((1 - var(--a, .2)) * 100%)) linear-gradient(hsl(0 0% 100% / .1), transparent) border-box;
 	color: white;
@@ -52,35 +46,46 @@
 	white-space: nowrap;
 }
 
-.followup:first-child {
+.sentiment::before {
+		margin-right: .3em;
+	}
+
+.sentiment.positive {
 		--color: var(--bs-success);
 	}
 
-.followup:nth-child(2) {
+.sentiment.positive::before {
+			content: "↑";
+
+		}
+
+.sentiment.negative {
 		--color: var(--bs-danger);
 	}
 
-.followup.issue {
-		--color: color-mix(in lab, var(--bs-orange), black 30%);
-	}
+.sentiment.negative::before {
+			content: "↓";
+		}
 
-.followup:hover {
+.sentiment:hover {
 		--a: .6;
 		color: white;
 	}
 
-.followup:active {
+.sentiment:active {
 		background-image: none;
 		transform: scale(.97) translateY(.1em);
 	}
 
-.followup.selected:where(.select *):where(.form-check.selected *) {
+/* Selected sentiment inside selected option */
+
+.sentiment.selected:where(.form-check.selected *) {
 		position: relative;
 		--a: 1;
 		border-color: hsl(0 0% 100% / .9);
 	}
 
-.followup.selected:where(.select *):where(.form-check.selected *)::before {
+.sentiment.selected:where(.form-check.selected *)::after {
 			content: "✓";
 			position: absolute;
 			top: -.4em;
@@ -113,33 +118,35 @@
 	}
 }
 
-.in-answer .comment-input {
-		z-index: 1;
-		position: relative;
-		--background-color: color-mix(in lab, var(--bg-color), white 25%);
-		background: var(--background-color);
-		margin-left: 5em;
-		margin-top: calc(0em - 3.3em * (2 - var(--selected-index)));
-		margin-right: -5px;
-		border-radius: .2em;
-		filter: drop-shadow(.05em .1em .5em black);
-		animation: .2s comments-open both;
-		transform-origin: calc(100% - 21px) -12px;
+.comment-input {
+	z-index: 1;
+	position: relative;
+	--background-color: color-mix(in lab, var(--bg-color), white 25%);
+	background: var(--background-color);
+	margin-left: 5em;
+	margin-top: calc(0em - 3.3em * (2 - var(--selected-index)));
+	margin-right: -5px;
+	border-radius: .2em;
+	filter: drop-shadow(.05em .1em .5em black);
+	animation: .2s comments-open both;
+	transform-origin: calc(100% - 21px) -12px;
+}
+
+.comment-input::after {
+		right: 15px;
+		left: auto;
+		border-bottom-color: var(--background-color);
 	}
 
-.in-answer .comment-input::after {
-			right: 15px;
-			left: auto;
-			border-bottom-color: var(--background-color);
-		}
+.form-check .comment-trigger-wrapper {
+		display: inline-flex !important;
+		filter: grayscale();
+		opacity: 0;
+		transition: 0s;
+	}
 
-.in-answer .form-check .comment-trigger-wrapper {
-			display: inline-flex !important;
-			opacity: 0;
-			transition: 0s;
+.form-check .comment-trigger-wrapper:is(.form-check:hover *, .form-check.selected *) {
+			opacity: 1;
+			transition: .6s;
+			filter: initial;
 		}
-
-.in-answer .form-check .comment-trigger-wrapper:is(.form-check:hover *, .form-check.selected *) {
-				opacity: 1;
-				transition: .6s;
-			}
