--- a/files/stateof/mocks/sentiment/style.postcss
+++ b/files/stateof/mocks/sentiment/style.postcss
@@ -15,10 +15,6 @@
 	font-size: 1rem;
 }
 
-.form-option-label {
-	display: flex;
-}
-
 .form-option-item {
 	flex: 1;
 }
@@ -27,26 +23,35 @@
 	display: inline-flex;
 	flex-wrap: wrap;
 	gap: .8em;
+	margin-left: .8em;
+}
 
-	.form-check & {
-		margin-left: .8em;
+@keyframes arrow {
+	from, 40% {
+		transform: translateY(var(--animation-offset));
+	}
+
+	20%, 60%, to {
+		transform: none;
 	}
 }
 
 .sentiment {
 	--_color: var(--color, var(--bs-blue));
 	border: 1px solid hsl(0 0% 100% / .3);
-	padding: 0.1em .8em 0.05em;
+	padding: 0.1em .9em 0.05em .75em;
 	border-radius: 999px;
 	background: color-mix(in lab, var(--_color), transparent calc((1 - var(--a, .2)) * 100%)) linear-gradient(hsl(0 0% 100% / .1), transparent) border-box;
 	color: white;
-	animation: fade-in 1s both;
 	font-size: 70%;
 	transition: .1s;
 	white-space: nowrap;
+	cursor: pointer;
+	user-select: none;
 
 	&::before {
 		margin-right: .3em;
+		scale: 1.15;
 	}
 
 	&.positive {
@@ -54,7 +59,7 @@
 
 		&::before {
 			content: "↑";
-
+			--animation-offset: -.1em;
 		}
 	}
 
@@ -63,12 +68,17 @@
 
 		&::before {
 			content: "↓";
+			--animation-offset: .1em;
 		}
 	}
 
 	&:hover {
 		--a: .6;
 		color: white;
+
+		&::before {
+			animation: arrow .7s infinite alternate;
+		}
 	}
 
 	&:active {
@@ -77,7 +87,7 @@
 	}
 
 	/* Selected sentiment inside selected option */
-	&.selected:where(.form-check.selected *) {
+	&:has(> :checked) {
 		position: relative;
 		--a: 1;
 		border-color: hsl(0 0% 100% / .9);
@@ -100,15 +110,46 @@
 	}
 }
 
-/* Proximity to answer */
-.form-check .comment-trigger-wrapper {
-	flex: 1;
+.form-check {
+	.form-option-label {
+		display: flex;
+		position: relative;
 
-	.comment-trigger {
-		order: 2;
-		margin-left: auto;
-		padding: 0;
+		> label {
+			gap: .4em;
+			flex: none;
+
+			/* Expand clickable area to whole row */
+			&::after {
+				content: "";
+				position: absolute;
+				inset: 0;
+			}
+		}
+
+		.comment-trigger-wrapper {
+			position: relative;
+			flex: 1;
+			xopacity: 0;
+			z-index: 1;
+			pointer-events: none;
+
+			& > * {
+				pointer-events: auto;
+			}
+
+			.comment-trigger {
+				margin-left: auto;
+				padding: 0;
+			}
+
+			&:is(.form-check:hover *, .form-check.selected *) {
+				opacity: 1;
+			}
+		}
 	}
+
+
 }
 
 @keyframes comments-open {
@@ -135,20 +176,5 @@
 		right: 15px;
 		left: auto;
 		border-bottom-color: var(--background-color);
-	}
-}
-
-.form-check {
-	.comment-trigger-wrapper {
-		display: inline-flex !important;
-		filter: grayscale();
-		opacity: 0;
-		transition: 0s;
-
-		&:is(.form-check:hover *, .form-check.selected *) {
-			opacity: 1;
-			transition: .6s;
-			filter: initial;
-		}
 	}
 }
