--- a/files/stateof/mocks/sentiment/style.postcss
+++ b/files/stateof/mocks/sentiment/style.postcss
@@ -19,10 +19,15 @@
 	flex: 1;
 }
 
+.form-input {
+	container-name: question;
+	container-type: inline-size;
+}
+
 .sentiments {
 	display: inline-flex;
 	flex-wrap: wrap;
-	gap: .8em;
+	gap: .6em;
 	margin-left: .8em;
 }
 
@@ -37,9 +42,11 @@
 }
 
 .sentiment {
+	display: flex;
+	align-items: center;
 	--_color: var(--color, var(--bs-blue));
 	border: 1px solid hsl(0 0% 100% / .3);
-	padding: 0.1em .9em 0.05em .75em;
+	padding: 0.1em .8em 0.05em;
 	border-radius: 999px;
 	background: color-mix(in lab, var(--_color), transparent calc((1 - var(--a, .2)) * 100%)) linear-gradient(hsl(0 0% 100% / .1), transparent) border-box;
 	color: white;
@@ -77,7 +84,7 @@
 		color: white;
 
 		&::before {
-			animation: arrow .7s infinite alternate;
+			animation: arrow .7s 3 alternate;
 		}
 	}
 
@@ -107,6 +114,29 @@
 			font-size: 80%;
 			line-height: 1;
 		}
+
+		.sentiment-label {
+
+
+		}
+	}
+
+	.sentiment-label {
+		transition-duration: .4s;
+		transition-property: letter-spacing, opacity;
+	}
+
+	@container question (width <= 500px) {
+		&:not(:has(> :checked)) {
+			&::before {
+				margin-right: 0;
+			}
+
+			.sentiment-label {
+				letter-spacing: -1ch;
+				opacity: 0;
+			}
+		}
 	}
 }
 
@@ -130,7 +160,6 @@
 		.comment-trigger-wrapper {
 			position: relative;
 			flex: 1;
-			xopacity: 0;
 			z-index: 1;
 			pointer-events: none;
 
@@ -143,13 +172,11 @@
 				padding: 0;
 			}
 
-			&:is(.form-check:hover *, .form-check.selected *) {
-				opacity: 1;
+			&:not(.form-check:is(:hover, :active, :focus-within) *, .form-check.selected *) {
+				opacity: 0;
 			}
 		}
 	}
-
-
 }
 
 @keyframes comments-open {
