sentiment: checkbox questions + code reorg

--- a/files/stateof/mocks/sentiment/style.postcss
+++ b/files/stateof/mocks/sentiment/style.postcss
@@ -1,5 +1,8 @@
 @import url("question.css");
 
+/* For demo only */
+body { padding-top: 2em; }
+
 @keyframes fade-in {
 	from {
 		opacity: 0;
@@ -192,7 +195,7 @@
 	--background-color: color-mix(in lab, var(--bg-color), white 25%);
 	background: var(--background-color);
 	margin-left: 5em;
-	margin-top: calc(0em - 3.3em * (2 - var(--selected-index)));
+	margin-top: calc(0em - 3.3em * (2 - var(--option-index)));
 	margin-right: -5px;
 	border-radius: .2em;
 	filter: drop-shadow(.05em .1em .5em black);
