--- a/files/stateof/mocks/sentiment/style.postcss
+++ b/files/stateof/mocks/sentiment/style.postcss
@@ -175,6 +175,12 @@ body { padding-top: 2em; }
 				padding: 0;
 			}
 
+			/*
+			Show if:
+			- hovering over /pointer down on/focus within the row
+			- option selected
+			- TODO: hide if not selected, and another row is being interacted with
+			*/
 			&:not(.form-check:is(:hover, :active, :focus-within) *, .form-check.selected *) {
 				opacity: 0;
 			}
