--- a/redirects.njk
+++ b/redirects.njk
@@ -24,6 +24,7 @@ eleventyExcludeFromCollections: true
 # Redirect projects that now live on GitHub or separate domains
 /css3patterns/* https://projects.verou.me/css3patterns/:splat 301
 /incrementable/* https://incrementable.verou.me/:splat 301
+/files/stateof/* https://projects.verou.me/stateof/:splat 301
 
 # Tag aliases
 {% for alias, tag in tag_aliases %}/blog/tags/{{ alias }}/ /blog/tags/{{ tag }}/ 301
