Fix contrast of links in callouts

--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -1682,6 +1682,7 @@ main aside {
 	a {
 		color: var(--link-color, var(--color, var(--color-accent)));
 		mix-blend-mode: multiply;
+		font-weight: 600;
 	}
 }
 
