--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -132,7 +132,7 @@
 
 	<small>
 		<a href="/credits/#licensing" title="Licensing details" class="copyright">&copy;2009&ndash;{{ currentYear }} Lea Verou</a>
-		<div class="credits">Powered by <a href="https://11ty.dev/">Eleventy</a>, <a href="https://netlify.com">Netlify</a>, and <a href="/credits/">more</a></div>
+		<span class="credits">Powered by <a href="https://11ty.dev/">Eleventy</a>, <a href="https://netlify.com">Netlify</a>, and <a href="/credits/">more</a></span>
 		<a href="#" class="to-top">
 			<span class="long-text">To the top</span>
 			<span class="short-text">Up</span>
