Fix validation issues

--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -67,16 +67,16 @@
 
 <main>
 
-<section class="warning">
+<div class="warning">
 	You are browsing the <a href="/blog/2023/going-lean/">new, beta version</a> of my website.
 	Some things may not work properly.
 	{% if is_old_post -%}
 	<a href="{{ oldURL }}">View this page on the old website</a> and if you spot any problems,
-	please <a href="{{ pkg.bugs.url }}/new?template=broken-page.yml&amp;title=Page regression: {{ title }}&amp;url={{ site.domain }}{{ page.url }}">file an issue</a>!
+	please <a href="{{ pkg.bugs.url }}/new?template=broken-page.yml&amp;title=Page%20regression:%20{{ title | urlencode }}&amp;url={{ site.domain }}{{ page.url }}">file an issue</a>!
 	{%- else -%}
-	If you spot any problems, please <a href="{{ pkg.bugs.url }}/new?template=broken-page.yml&amp;title=Broken page: {{ title }}&amp;url={{ site.domain }}{{ page.url }}">file an issue</a>!
+	If you spot any problems, please <a href="{{ pkg.bugs.url }}/new?template=broken-page.yml&amp;title=Broken%20page:%20{{ title | urlencode }}&amp;url={{ site.domain }}{{ page.url }}">file an issue</a>!
 	{%- endif %}
-</section>
+</div>
 
 {%- if draft -%}
 <section class="info" style="--label: 'Someone has been nosy!'">
