--- a/assets/bootstrap-icons.css
+++ b/assets/bootstrap-icons.css
@@ -13,6 +13,7 @@
 	--icon-exclamation-triangle-fill: "\F33A";
 	--icon-eyeglasses: "\F343";
 	--icon-info-lg: "\F646";
+	--icon-question-lg: "\F64E";
 	--icon-lightbulb-fill: "\F468";
 	--icon-rss-fill: "\F521";
 	--icon-stopwatch: "\F597";
