--- a/assets/bootstrap-icons.css
+++ b/assets/bootstrap-icons.css
@@ -6,12 +6,16 @@
 	--icon-arrow-left-circle: "\F12A";
 	--icon-arrow-right-circle: "\F134";
 	--icon-arrow-down-circle: "\F119";
+	--icon-box-arrow-up-right: "\F1C5";
+	--icon-bug: "\F1DC";
+	--icon-bug-fill: "\F1DB";
 	--icon-clipboard2-check-fill: "\F724";
 	--icon-comments: "\F268";
 	--icon-date: "\F1F6";
 	--icon-edit: "\F4CA";
 	--icon-exclamation-triangle-fill: "\F33A";
 	--icon-eyeglasses: "\F343";
+	--icon-github: "\F3ED";
 	--icon-info-lg: "\F646";
 	--icon-question-lg: "\F64E";
 	--icon-lightbulb-fill: "\F468";
