--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -32,7 +32,7 @@
 </head>
 <body class="language-{{ defaultLanguage or "css" }}">
 {% import "_nav.njk" as nav with context %}
-<header>
+<header class="monitor-in-view">
 	<div class="site-meta">
 		<a href="/" class="site-logo">
 			<img property="image" src="/mark.svg" alt="">
