--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -114,6 +114,7 @@ body {
 	box-sizing: border-box;
 	margin: 0;
 	min-height: 100vh;
+	accent-color: var(--color-accent);
 }
 
 h1, h2, h3, h4, h5, h6, summary {
