--- a/assets/bootstrap-icons.css
+++ b/assets/bootstrap-icons.css
@@ -17,6 +17,8 @@
 	--icon-eyeglasses: "\F343";
 	--icon-github: "\F3ED";
 	--icon-info-lg: "\F646";
+	--icon-link-45deg: "\F470";
+	--icon-megaphone-fill: "\F483";
 	--icon-question-lg: "\F64E";
 	--icon-lightbulb-fill: "\F468";
 	--icon-rss-fill: "\F521";
